--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
 
     <meta property="og:image" content="path/to/image.jpg">
-    <link rel="shortcut icon" href="img/favicon/favicon.ico" type="image/x-icon">
+    <link rel="shortcut icon" href="../resources/admin/img/favicon/favicon.ico" type="image/x-icon">
 
     <link rel="stylesheet" href="css/admin/main.css?id=397e67c6e9875472eef8">
     <link rel="stylesheet" href="css/admin/libs.css?id=397e67c6e9875472eef8">
