--- a/index.html
+++ b/index.html
@@ -75,6 +75,16 @@
                 </li>
                 <li class="menu__item">
                     <a href="javascript:void(0)" class="menu__link">
+                        <span>Основной</span>
+                    </a>
+                </li>
+                <li class="menu__item">
+                    <a href="javascript:void(0)" class="menu__link">
+                        <span>Аксессуары</span>
+                    </a>
+                </li>
+                <li class="menu__item">
+                    <a href="javascript:void(0)" class="menu__link">
 						<span>Motorstudio</span>
 					</a>
                 </li>
@@ -82,7 +92,7 @@
         </nav>
     </header>
 
-    <section class="content">
+    <section class="content" style="display: none;">
         <div class="content__center">
             <aside class="sidebar">
                 <ul class="sidebar__list">
