--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
     <meta property="og:image" content="path/to/image.jpg">
     <link rel="shortcut icon" href="../resources/admin/img/favicon/favicon.ico" type="image/x-icon">
 
-    <link rel="stylesheet" href="css/admin/main.css?id=397e67c6e9875472eef8">
-    <link rel="stylesheet" href="css/admin/libs.css?id=397e67c6e9875472eef8">
+    <link rel="stylesheet" href="css/admin/main.css?300520201328">
+    <link rel="stylesheet" href="css/admin/libs.css?300520201328">
 
 </head>
 
