--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
         </nav>
     </header>
 
-    <section class="content" style="display: none;">
+    <section class="content">
         <div class="content__center">
             <aside class="sidebar">
                 <ul class="sidebar__list">
@@ -203,7 +203,7 @@
                     </li>
                 </ul>
             </aside>
-            <div class="content__right">
+            <div class="content__right" style="display: none;">
                 <form action="">
                     <table class="table">
                         <caption>
