hide aside & added mobile-btn

--- a/index.html
+++ b/index.html
@@ -95,6 +95,9 @@
     <section class="content">
         <div class="content__center">
             <aside class="sidebar">
+
+                <button class="mobile-btn"><span></span><span></span><span></span></button>
+
                 <ul class="sidebar__list">
                     <li class="sidebar__item">
                         <a href="javascript:void(0)" class="sidebar__link">
