--- a/index.html
+++ b/index.html
@@ -206,9 +206,9 @@
                     </li>
                 </ul>
             </aside>
-            <div class="content__right" style="display: none;">
+            <div class="content__right">
                 <form action="">
-                    <table class="table">
+                    <table class="table" style="display: none;">
                         <caption>
                             <div class="table__flex table__flex--caption">
                                 <h2 class="h2">Список регионов</h2>
