--- a/index.html
+++ b/index.html
@@ -208,115 +208,119 @@
             </aside>
             <div class="content__right">
                 <form action="">
-                    <table class="table" style="display: none;">
-                        <caption>
-                            <div class="table__flex table__flex--caption">
-                                <h2 class="h2">Список регионов</h2>
-                                <button class="button button--small button--iconed">
-									<span>
-										<svg width="8" height="8" viewBox="0 0 8 8" fill="none" xmlns="http://www.w3.org/2000/svg">
-											<rect x="3" width="2" height="8" fill="white" />
-											<rect x="8" y="3" width="2" height="8" transform="rotate(90 8 3)" fill="white" />
-										</svg>
-									</span>
-									Добавить
-								</button>
-                            </div>
-                        </caption>
-                        <thead>
-                            <tr>
-                                <th>id</th>
-                                <th>Название</th>
-                                <th>Что-то ещё</th>
-                                <th>Кнопки</th>
-                            </tr>
-                        </thead>
-                        <tbody>
-                            <tr>
-                                <td>1</td>
-                                <td>
-                                    <div class="table__flex">
-                                        <div class="table__text">Кировская область</div>
-                                    </div>
-                                </td>
-                                <td>
-                                </td>
-                                <td>
-                                    <div class="table__flex">
-                                        <ul class="table__controls">
-                                            <li>
-                                                <a href="javascript:void(0)" class="table__link">Изменить</a>
-                                            </li>
-                                            <li>
-                                                <a href="javascript:void(0)" class="table__link">Удалить</a>
-                                            </li>
-                                        </ul>
-                                    </div>
-                                </td>
-                            </tr>
-                            <tr>
-                                <td>2</td>
-                                <td>
-                                    <div class="table__flex">
-                                        <div class="table__text">Московская </div>
-                                    </div>
-                                </td>
-                                <td>
-                                    <div class="table__flex">
-                                        <div class="table__text">область</div>
-                                    </div>
-                                </td>
-                                <td>
-                                    <div class="table__flex">
-                                        <ul class="table__controls">
-                                            <li>
-                                                <a href="javascript:void(0)" class="table__link">Изменить</a>
-                                            </li>
-                                            <li>
-                                                <a href="javascript:void(0)" class="table__link">Удалить</a>
-                                            </li>
-                                        </ul>
-                                    </div>
-                                </td>
-                            </tr>
-                            <tr>
-                                <td>3</td>
-                                <td>
-                                    <div class="table__flex">
-                                        <div class="table__text">Краснодарский край Краснодарский край Краснодарский край</div>
-                                    </div>
-                                </td>
-                                <td>
-                                </td>
-                                <td>
-                                    <div class="table__flex">
-                                        <ul class="table__controls table__controls--icons">
-                                            <li>
-                                                <a href="javascript:void(0)" class="table__link">
-													<svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
-														<circle cx="12" cy="12" r="12" fill="#00AAD2" />
-														<path d="M15.8892 6.48958L18.0105 8.6109L9.16482 17.4566L7.6086 17.3593C7.35702 17.3436 7.15648 17.143 7.14076 16.8915L7.0435 15.3352L15.8892 6.48958Z"
-														stroke="white" />
-														<path d="M13.7678 8.6109L15.8891 10.7322" stroke="white" />
-													</svg>
-												</a>
-                                            </li>
-                                            <li>
-                                                <a href="javascript:void(0)" class="table__link">
-													<svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
-														<circle cx="12" cy="12" r="12" fill="#E63312" />
-														<path d="M7 7.5L8.5 17.5H15.5L17 7.5" stroke="white" />
-														<path d="M6 7.5H18" stroke="white" />
-														<rect x="9.5" y="5.5" width="5" height="2" stroke="white" />
-													</svg>
-												</a>
-                                            </li>
-                                        </ul>
-                                    </div>
-                                </td>
-                            </tr>
-                        </tbody>
-                    </table>
+
+                    <div class="table__wrap">
+                        <table class="table">
+                            <caption>
+                                <div class="table__flex table__flex--caption">
+                                    <h2 class="h2">Список регионов</h2>
+                                    <button class="button button--small button--iconed">
+                                        <span>
+                                            <svg width="8" height="8" viewBox="0 0 8 8" fill="none" xmlns="http://www.w3.org/2000/svg">
+                                                <rect x="3" width="2" height="8" fill="white" />
+                                                <rect x="8" y="3" width="2" height="8" transform="rotate(90 8 3)" fill="white" />
+                                            </svg>
+                                        </span>
+                                        Добавить
+                                    </button>
+                                </div>
+                            </caption>
+                            <thead>
+                                <tr>
+                                    <th>id</th>
+                                    <th>Название</th>
+                                    <th>Что-то ещё</th>
+                                    <th>Кнопки</th>
+                                </tr>
+                            </thead>
+                            <tbody>
+                                <tr>
+                                    <td>1</td>
+                                    <td>
+                                        <div class="table__flex">
+                                            <div class="table__text">Кировская область</div>
+                                        </div>
+                                    </td>
+                                    <td>
+                                    </td>
+                                    <td>
+                                        <div class="table__flex">
+                                            <ul class="table__controls">
+                                                <li>
+                                                    <a href="javascript:void(0)" class="table__link">Изменить</a>
+                                                </li>
+                                                <li>
+                                                    <a href="javascript:void(0)" class="table__link">Удалить</a>
+                                                </li>
+                                            </ul>
+                                        </div>
+                                    </td>
+                                </tr>
+                                <tr>
+                                    <td>2</td>
+                                    <td>
+                                        <div class="table__flex">
+                                            <div class="table__text">Московская </div>
+                                        </div>
+                                    </td>
+                                    <td>
+                                        <div class="table__flex">
+                                            <div class="table__text">область</div>
+                                        </div>
+                                    </td>
+                                    <td>
+                                        <div class="table__flex">
+                                            <ul class="table__controls">
+                                                <li>
+                                                    <a href="javascript:void(0)" class="table__link">Изменить</a>
+                                                </li>
+                                                <li>
+                                                    <a href="javascript:void(0)" class="table__link">Удалить</a>
+                                                </li>
+                                            </ul>
+                                        </div>
+                                    </td>
+                                </tr>
+                                <tr>
+                                    <td>3</td>
+                                    <td>
+                                        <div class="table__flex">
+                                            <div class="table__text">Краснодарский край Краснодарский край Краснодарский край</div>
+                                        </div>
+                                    </td>
+                                    <td>
+                                    </td>
+                                    <td>
+                                        <div class="table__flex">
+                                            <ul class="table__controls table__controls--icons">
+                                                <li>
+                                                    <a href="javascript:void(0)" class="table__link">
+                                                        <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+                                                            <circle cx="12" cy="12" r="12" fill="#00AAD2" />
+                                                            <path d="M15.8892 6.48958L18.0105 8.6109L9.16482 17.4566L7.6086 17.3593C7.35702 17.3436 7.15648 17.143 7.14076 16.8915L7.0435 15.3352L15.8892 6.48958Z"
+                                                            stroke="white" />
+                                                            <path d="M13.7678 8.6109L15.8891 10.7322" stroke="white" />
+                                                        </svg>
+                                                    </a>
+                                                </li>
+                                                <li>
+                                                    <a href="javascript:void(0)" class="table__link">
+                                                        <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+                                                            <circle cx="12" cy="12" r="12" fill="#E63312" />
+                                                            <path d="M7 7.5L8.5 17.5H15.5L17 7.5" stroke="white" />
+                                                            <path d="M6 7.5H18" stroke="white" />
+                                                            <rect x="9.5" y="5.5" width="5" height="2" stroke="white" />
+                                                        </svg>
+                                                    </a>
+                                                </li>
+                                            </ul>
+                                        </div>
+                                    </td>
+                                </tr>
+                            </tbody>
+                        </table>
+                    </div>
+                    
                     <div class="content__line content__line--3">
                         <fieldset>
                             <label class="label" for="firstName">Имя</label>
