поправил стили, добавил кнопку, текст

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
                         <a href="javascript:void(0)" class="header__link">
 							<span>Настройки</span>
 							<div class="header__icon">
-								<svg width="22" height="22" viewBox="0 0 22 22" fill="none" xmlns="http://www.w3.org/2000/svg">
+								<svg viewBox="0 0 22 22" fill="none" xmlns="http://www.w3.org/2000/svg">
 									<path d="M12.2816 1.23633L13.401 2.65378C13.8315 3.19892 14.5141 3.48163 15.204 3.40058L16.9978 3.18984L18.8102 5.00226L18.5995 6.79611C18.5184 7.48599 18.8011 8.16852 19.3463 8.59903L20.7637 9.71845L20.7637 12.2816L19.3463 13.401C18.8011 13.8315 18.5184 14.5141 18.5995 15.204L18.8102 16.9978L16.9978 18.8102L15.204 18.5995C14.5141 18.5184 13.8315 18.8011 13.401 19.3463L12.2816 20.7637H9.71845L8.59903 19.3463C8.16852 18.8011 7.48599 18.5184 6.79611 18.5995L5.00227 18.8102L3.18984 16.9978L3.40058 15.204C3.48163 14.5141 3.19892 13.8315 2.65379 13.401L1.23633 12.2816L1.23633 9.71845L2.65378 8.59903C3.19892 8.16852 3.48163 7.48599 3.40058 6.79611L3.18984 5.00227L5.00227 3.18984L6.79611 3.40058C7.48599 3.48163 8.16852 3.19892 8.59903 2.65378L9.71845 1.23633L12.2816 1.23633Z"
 									 stroke="#002C5F" stroke-width="2" />
 									<circle cx="11" cy="11" r="4" stroke="#002C5F" stroke-width="2" />
@@ -48,9 +48,17 @@
                     </li>
                     <li>
                         <a href="javascript:void(0)" class="header__link">
+                            <span>Сбросить кеш</span>
+                            <div class="header__icon">
+                                <svg version="1.1" id="Capa_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 366.3 366.3" style="enable-background:new 0 0 366.3 366.3;" xml:space="preserve"><path d="M347.3,185.9c-0.1-11.9-9.9-21.5-21.8-21.5H220.1c-5.6-0.1-10-4.6-9.9-10.1V27.9c0-14.9-12.1-27-27-27 c-14.9,0-27,12.1-27,27v126.4c0,5.5-4.4,10-9.9,10.1H40.9c-12,0-21.7,9.6-21.8,21.5v47.5h328.2V185.9z" fill="#002C5F"/><path d="M366.3,365.4l-17.9-112H17.9L0,365.4h90.1v-46.8c0-5.5,4.5-10,10-10s10,4.5,10,10v46.8h63v-67.6c0-5.5,4.5-10,10-10 s10,4.5,10,10v67.6h63v-46.8c0-5.5,4.5-10,10-10s10,4.5,10,10v46.8H366.3z" fill="#002C5F"/></svg>
+                            </div>
+                        </a>
+                    </li>
+                    <li>
+                        <a href="javascript:void(0)" class="header__link">
 							<span>Выйти</span>
 							<div class="header__icon">
-								<svg width="26" height="24" viewBox="0 0 26 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+								<svg viewBox="0 0 26 24" fill="none" xmlns="http://www.w3.org/2000/svg">
 									<path d="M20 8L22.2969 11.4453C22.5208 11.7812 22.5208 12.2188 22.2969 12.5547L20 16" stroke="#002C5F" stroke-width="2" />
 									<path d="M17.2746 8.66667C16.0106 5.91263 13.2286 4 9.99996 4C5.58168 4 1.99996 7.58172 1.99996 12C1.99996 16.4183 5.58168 20 9.99996 20C13.2286 20 16.0106 18.0874 17.2746 15.3333M22.6666 12L9.99996 12"
 									 stroke="#002C5F" stroke-width="2" />
@@ -95,7 +103,8 @@
     <section class="content">
         <div class="content__center">
             <aside class="sidebar">
-
+                
+                <div class="menu-title">Меню</div>
                 <button class="mobile-btn"><span></span><span></span><span></span></button>
 
                 <ul class="sidebar__list">
