add some text in table

--- a/index.html
+++ b/index.html
@@ -233,10 +233,17 @@
                         <table class="table">
                             <thead>
                                 <tr>
-                                    <th>id</th>
-                                    <th>Название</th>
-                                    <th>Что-то ещё</th>
-                                    <th>Кнопки</th>
+                                    <th><div class="table__flex">id</div></th>
+                                    <th><div class="table__flex">Название</div></th>
+                                    <th><div class="table__flex">Что-то ещё</div></th>
+                                    <th><div class="table__flex">Что-то ещё</div></th>
+                                    <th><div class="table__flex">Что-то ещё</div></th>
+                                    <th><div class="table__flex">Что-то ещё</div></th>
+                                    <th><div class="table__flex">Что-то ещё</div></th>
+                                    <th><div class="table__flex">Что-то ещё</div></th>
+                                    <th><div class="table__flex">Что-то ещё</div></th>
+                                    <th><div class="table__flex">Что-то ещё</div></th>
+                                    <th><div class="table__flex">Кнопки</div></th>
                                 </tr>
                             </thead>
                             <tbody>
@@ -248,6 +255,44 @@
                                         </div>
                                     </td>
                                     <td>
+                                        <div class="table__flex">
+                                            Много разного текста Много разного текста
+                                        </div>
+                                    </td>
+                                    <td>
+                                        <div class="table__flex">
+                                            Много разного текста Много разного текста
+                                        </div>
+                                    </td>
+                                    <td>
+                                        <div class="table__flex">
+                                            Много разного текста Много разного текста
+                                        </div>
+                                    </td>
+                                    <td>
+                                        <div class="table__flex">
+                                            Много разного текста Много разного текста
+                                        </div>
+                                    </td>
+                                    <td>
+                                        <div class="table__flex">
+                                            Много разного текста Много разного текста
+                                        </div>
+                                    </td>
+                                    <td>
+                                        <div class="table__flex">
+                                            Много разного текста Много разного текста
+                                        </div>
+                                    </td>
+                                    <td>
+                                        <div class="table__flex">
+                                            Много разного текста Много разного текста
+                                        </div>
+                                    </td>
+                                    <td>
+                                        <div class="table__flex">
+                                            Много разного текста Много разного текста
+                                        </div>
                                     </td>
                                     <td>
                                         <div class="table__flex">
@@ -276,6 +321,41 @@
                                     </td>
                                     <td>
                                         <div class="table__flex">
+                                            <div class="table__text">область</div>
+                                        </div>
+                                    </td>
+                                    <td>
+                                        <div class="table__flex">
+                                            <div class="table__text">область</div>
+                                        </div>
+                                    </td>
+                                    <td>
+                                        <div class="table__flex">
+                                            <div class="table__text">область</div>
+                                        </div>
+                                    </td>
+                                    <td>
+                                        <div class="table__flex">
+                                            <div class="table__text">область</div>
+                                        </div>
+                                    </td>
+                                    <td>
+                                        <div class="table__flex">
+                                            <div class="table__text">область</div>
+                                        </div>
+                                    </td>
+                                    <td>
+                                        <div class="table__flex">
+                                            <div class="table__text">область</div>
+                                        </div>
+                                    </td>
+                                    <td>
+                                        <div class="table__flex">
+                                            <div class="table__text">область</div>
+                                        </div>
+                                    </td>
+                                    <td>
+                                        <div class="table__flex">
                                             <ul class="table__controls">
                                                 <li>
                                                     <a href="javascript:void(0)" class="table__link">Изменить</a>
@@ -293,6 +373,23 @@
                                         <div class="table__flex">
                                             <div class="table__text">Краснодарский край Краснодарский край Краснодарский край</div>
                                         </div>
+                                    </td>
+                                    <td>
+                                    </td>
+                                    <td>
+                                    </td>
+                                    <td>
+                                    </td>
+                                    <td>
+                                        <div class="table__flex">
+                                            Длинный_текст_в_одну_строку_например_ссылка
+                                        </div>
+                                    </td>
+                                    <td>
+                                    </td>
+                                    <td>
+                                    </td>
+                                    <td>
                                     </td>
                                     <td>
                                     </td>
