added event keydown

--- a/index.html
+++ b/index.html
@@ -573,7 +573,7 @@
 					</div>
 					<div class="content__line">
 						<div class="file-upload">
-							<label>
+							<label tabindex="0" class="keydown">
 								<input class="file-upload__input" type="file" name="file">
 								<div class="button button--small file-upload__button">Выбрать фото</div>
 							</label>
@@ -592,42 +592,42 @@
 
 							<ul class="selection">
 								<li class="selection__item">
-									<label class="checkbox">
+									<label class="checkbox keydown" tabindex="0">
 										<input type="checkbox" name="" id="">
 										<div class="checkbox__box"></div>
 										<div class="checkbox__title">Solaris</div>
 									</label>
 								</li>
 								<li class="selection__item">
-									<label class="checkbox">
+									<label class="checkbox keydown" tabindex="0"">
 										<input type="checkbox" name="" id="">
 										<div class="checkbox__box"></div>
 										<div class="checkbox__title">SantaFe</div>
 									</label>
 								</li>
 								<li class="selection__item">
-									<label class="checkbox">
+									<label class="checkbox keydown" tabindex="0">
 										<input type="checkbox" name="" id="">
 										<div class="checkbox__box"></div>
 										<div class="checkbox__title">Solaris</div>
 									</label>
 								</li>
 								<li class="selection__item">
-									<label class="checkbox">
+									<label class="checkbox keydown" tabindex="0"">
 										<input type="checkbox" name="" id="">
 										<div class="checkbox__box"></div>
 										<div class="checkbox__title">SantaFe</div>
 									</label>
 								</li>
 								<li class="selection__item">
-									<label class="checkbox">
+									<label class="checkbox keydown" tabindex="0"">
 										<input type="checkbox" name="" id="">
 										<div class="checkbox__box"></div>
 										<div class="checkbox__title">Solaris</div>
 									</label>
 								</li>
 								<li class="selection__item">
-									<label class="checkbox">
+									<label class="checkbox keydown" tabindex="0"">
 										<input type="checkbox" name="" id="">
 										<div class="checkbox__box"></div>
 										<div class="checkbox__title">SantaFe</div>
@@ -642,14 +642,14 @@
 
 							<ul class="selection">
 								<li class="selection__item">
-									<label class="radio">
+									<label class="radio keydown" tabindex="0"">
 										<input type="radio" name="gender" id="">
 										<div class="radio__circle"></div>
 										<div class="radio__title">Мужской</div>
 									</label>
 								</li>
 								<li class="selection__item">
-									<label class="radio">
+									<label class="radio keydown" tabindex="0"">
 										<input type="radio" name="gender" id="">
 										<div class="radio__circle"></div>
 										<div class="radio__title">Женский</div>
@@ -666,7 +666,7 @@
 					</div>
 					<div class="content__line">
 						<div class="file-upload multiple">
-							<label>
+							<label tabindex="0" class="keydown">
 								<input class="file-upload__input" type="file" name="photos" multiple>
 								<div class="button button--small file-upload__button">Выбрать несколько фото</div>
 							</label>
@@ -678,7 +678,7 @@
 					</div>
 					<div class="content__line">
 						<div class="file-upload multiple">
-							<label>
+							<label tabindex="0" class="keydown">
 								<input class="file-upload__input" type="file" name="files" multiple>
 								<div class="button button--small file-upload__button">Выбрать несколько файлов</div>
 							</label>
