test link in table

--- a/index.html
+++ b/index.html
@@ -251,12 +251,12 @@
 									<td>1</td>
 									<td>
 										<div class="table__flex">
-											<div class="table__text">Кировская область</div>
+											<div class="table__text"><a href="#" class="table__link">Кировская область</a></div>
 										</div>
 									</td>
 									<td>
 										<div class="table__flex">
-											Много разного текста Много разного текста
+											<a href="#" class="table__link">Много разного текста Много разного текста</a>
 										</div>
 									</td>
 									<td>
@@ -311,7 +311,7 @@
 									<td>2</td>
 									<td>
 										<div class="table__flex">
-											<div class="table__text">Московская </div>
+											<div class="table__text"><a href="#">Московская</a> </div>
 										</div>
 									</td>
 									<td>
