--- a/index.html
+++ b/index.html
@@ -311,7 +311,7 @@
 									<td>2</td>
 									<td>
 										<div class="table__flex">
-											<div class="table__text"><a href="#">Московская</a> </div>
+											<div class="table__text"><a href="#" class="table__link">Московская</a> </div>
 										</div>
 									</td>
 									<td>
