add buttons and text

--- a/index.html
+++ b/index.html
@@ -216,10 +216,16 @@
 				</ul>
 			</aside>
 			<div class="content__right">
+				<h1 class="h1">Заголовок H1</h1>
+				<h2 class="h2">Заголовок выше формы</h2>
+				<div class="content__text">Lorem ipsum, dolor sit amet, consectetur adipisicing elit. Molestiae accusantium culpa accusamus totam possimus vero itaque odio reprehenderit magnam delectus, sunt nobis maiores labore, voluptatem, explicabo. Id non, placeat eaque! Reprehenderit id optio voluptatibus sit sint perferendis, aut expedita dolor quos ea! Odio odit corrupti nesciunt facilis commodi sed qui sint labore amet a earum tenetur perferendis nisi fugit veniam culpa, temporibus doloribus dolorem dolore laudantium officia eaque? Earum excepturi, minima ut eaque esse veniam voluptates tenetur obcaecati saepe nostrum quo, vero corporis beatae pariatur voluptas ex dolores? Corporis nesciunt neque aut dolor delectus earum tempore ad explicabo quibusdam aspernatur.</div>
 				<form action="">
 					<div class="table__flex table__flex--caption">
-						<h2 class="h2">Список регионов</h2>
-						<button class="button button--small button--iconed">
+						<h2 class="h2">Заголовок в форме</h2>
+						<!-- /.table_text -->
+						<a href="#" class="button button--large">Большая кнопка</a>
+						<button class="button button--small">кнопка тегом button</button>
+						<a href="#" class="button button--small button--iconed">
 							<span>
 								<svg width="8" height="8" viewBox="0 0 8 8" fill="none" xmlns="http://www.w3.org/2000/svg">
 									<rect x="3" width="2" height="8" fill="white" />
@@ -227,7 +233,7 @@
 								</svg>
 							</span>
 							Добавить
-						</button>
+						</a>
 					</div>
 					<div class="table__wrap">
 						<table class="table">
