add one line select

--- a/index.html
+++ b/index.html
@@ -578,6 +578,16 @@
 						</fieldset>
 					</div>
 					<div class="content__line">
+						<fieldset>
+							<label class="label" for="dealer">Длинная строка</label>
+							<select class="select" name="dealer">
+								<option>Выберите дилера</option>
+								<option value="1">Киров</option>
+								<option value="2">Москва</option>
+							</select>
+						</fieldset>
+					</div>
+					<div class="content__line">
 						<div class="file-upload">
 							<label tabindex="0" class="keydown">
 								<input class="file-upload__input" type="file" name="file">
