upd keydown func

--- a/index.html
+++ b/index.html
@@ -223,9 +223,9 @@
 					<div class="table__flex table__flex--caption">
 						<h2 class="h2">Заголовок в форме</h2>
 						<!-- /.table_text -->
-						<a href="#" class="button button--large">Большая кнопка</a>
+						<a href="javascript:void(0)" class="button button--large">Большая кнопка</a>
 						<button class="button button--small">кнопка тегом button</button>
-						<a href="#" class="button button--small button--iconed">
+						<a href="javascript:void(0)" class="button button--small button--iconed">
 							<span>
 								<svg width="8" height="8" viewBox="0 0 8 8" fill="none" xmlns="http://www.w3.org/2000/svg">
 									<rect x="3" width="2" height="8" fill="white" />
@@ -257,12 +257,12 @@
 									<td>1</td>
 									<td>
 										<div class="table__flex">
-											<div class="table__text"><a href="#" class="table__link">Кировская область</a></div>
+											<div class="table__text"><a href="javascript:void(0)" class="table__link">Кировская область</a></div>
 										</div>
 									</td>
 									<td>
 										<div class="table__flex">
-											<a href="#" class="table__link">Много разного текста Много разного текста</a>
+											<a href="javascript:void(0)" class="table__link">Много разного текста Много разного текста</a>
 										</div>
 									</td>
 									<td>
@@ -317,7 +317,7 @@
 									<td>2</td>
 									<td>
 										<div class="table__flex">
-											<div class="table__text"><a href="#" class="table__link">Московская</a> </div>
+											<div class="table__text"><a href="javascript:void(0)" class="table__link">Московская</a> </div>
 										</div>
 									</td>
 									<td>
