upd layout and styles

--- a/index.html
+++ b/index.html
@@ -222,6 +222,8 @@
 				<form action="">
 					<div class="table__flex table__flex--caption">
 						<h2 class="h2">Заголовок в форме</h2>
+					</div>
+					<div class="table__controls table__flex--caption">
 						<!-- /.table_text -->
 						<a href="javascript:void(0)" class="button button--large">Большая кнопка</a>
 						<button class="button button--small">кнопка тегом button</button>
@@ -239,69 +241,50 @@
 						<table class="table">
 							<thead>
 								<tr>
-									<th><div class="table__flex">id</div></th>
-									<th><div class="table__flex">Название</div></th>
-									<th><div class="table__flex">Что-то ещё</div></th>
-									<th><div class="table__flex">Что-то ещё</div></th>
-									<th><div class="table__flex">Что-то ещё</div></th>
-									<th><div class="table__flex">Что-то ещё</div></th>
-									<th><div class="table__flex">Что-то ещё</div></th>
-									<th><div class="table__flex">Что-то ещё</div></th>
-									<th><div class="table__flex">Что-то ещё</div></th>
-									<th><div class="table__flex">Что-то ещё</div></th>
-									<th><div class="table__flex">Кнопки</div></th>
+									<th>id</th>
+									<th>Название</th>
+									<th>Что-то ещё</th>
+									<th>Что-то ещё</th>
+									<th>Что-то ещё</th>
+									<th>Что-то ещё</th>
+									<th>Что-то ещё</th>
+									<th>Что-то ещё</th>
+									<th>Что-то ещё</th>
+									<th>Что-то ещё</th>
+									<th>Кнопки</th>
 								</tr>
 							</thead>
 							<tbody>
 								<tr>
 									<td>1</td>
 									<td>
-										<div class="table__flex">
 											<div class="table__text"><a href="javascript:void(0)" class="table__link">Кировская область</a></div>
-										</div>
 									</td>
 									<td>
-										<div class="table__flex">
 											<a href="javascript:void(0)" class="table__link">Много разного текста Много разного текста</a>
-										</div>
 									</td>
 									<td>
-										<div class="table__flex">
 											Много разного текста Много разного текста
-										</div>
 									</td>
 									<td>
-										<div class="table__flex">
 											Много разного текста Много разного текста
-										</div>
 									</td>
 									<td>
-										<div class="table__flex">
 											Много разного текста Много разного текста
-										</div>
 									</td>
 									<td>
-										<div class="table__flex">
 											Много разного текста Много разного текста
-										</div>
 									</td>
 									<td>
-										<div class="table__flex">
 											Много разного текста Много разного текста
-										</div>
 									</td>
 									<td>
-										<div class="table__flex">
 											Много разного текста Много разного текста
-										</div>
 									</td>
 									<td>
-										<div class="table__flex">
 											Много разного текста Много разного текста
-										</div>
 									</td>
 									<td>
-										<div class="table__flex">
 											<ul class="table__controls">
 												<li>
 													<a href="javascript:void(0)" class="table__link">Изменить</a>
@@ -310,58 +293,38 @@
 													<a href="javascript:void(0)" class="table__link">Удалить</a>
 												</li>
 											</ul>
-										</div>
 									</td>
 								</tr>
 								<tr>
 									<td>2</td>
 									<td>
-										<div class="table__flex">
 											<div class="table__text"><a href="javascript:void(0)" class="table__link">Московская</a> </div>
-										</div>
 									</td>
 									<td>
-										<div class="table__flex">
 											<div class="table__text">область</div>
-										</div>
 									</td>
 									<td>
-										<div class="table__flex">
 											<div class="table__text">область</div>
-										</div>
 									</td>
 									<td>
-										<div class="table__flex">
 											<div class="table__text">область</div>
-										</div>
 									</td>
 									<td>
-										<div class="table__flex">
 											<div class="table__text">область</div>
-										</div>
 									</td>
 									<td>
-										<div class="table__flex">
 											<div class="table__text">область</div>
-										</div>
 									</td>
 									<td>
-										<div class="table__flex">
 											<div class="table__text">область</div>
-										</div>
 									</td>
 									<td>
-										<div class="table__flex">
 											<div class="table__text">область</div>
-										</div>
 									</td>
 									<td>
-										<div class="table__flex">
 											<div class="table__text">область</div>
-										</div>
 									</td>
 									<td>
-										<div class="table__flex">
 											<ul class="table__controls">
 												<li>
 													<a href="javascript:void(0)" class="table__link">Изменить</a>
@@ -370,15 +333,12 @@
 													<a href="javascript:void(0)" class="table__link">Удалить</a>
 												</li>
 											</ul>
-										</div>
 									</td>
 								</tr>
 								<tr>
 									<td>3</td>
 									<td>
-										<div class="table__flex">
 											<div class="table__text">Краснодарский край Краснодарский край Краснодарский край</div>
-										</div>
 									</td>
 									<td>
 									</td>
@@ -387,9 +347,7 @@
 									<td>
 									</td>
 									<td>
-										<div class="table__flex">
 											Длинный_текст_в_одну_строку_например_ссылка
-										</div>
 									</td>
 									<td>
 									</td>
@@ -400,7 +358,6 @@
 									<td>
 									</td>
 									<td>
-										<div class="table__flex">
 											<ul class="table__controls table__controls--icons">
 												<li>
 													<a href="javascript:void(0)" class="table__link">
@@ -423,7 +380,6 @@
 													</a>
 												</li>
 											</ul>
-										</div>
 									</td>
 								</tr>
 							</tbody>
@@ -433,21 +389,31 @@
 						<table class="table">
 							<thead>
 								<tr>
-									<th><div class="table__flex">id</div></th>
-									<th><div class="table__flex">Название</div></th>
-									<th><div class="table__flex">Кнопки</div></th>
+									<th>id</th>
+									<th>Название</th>
+									<th>Кнопки</th>
 								</tr>
 							</thead>
 							<tbody>
+								<tr class="search">
+									<td>
+										<fieldset>
+											<input class="input" type="text" name="search_id" placeholder="" value="">
+										</fieldset>
+									</td>
+									<td>
+										<fieldset>
+											<input class="input" type="text" name="search_name" placeholder="" value="">
+										</fieldset>
+									</td>
+									<td><a href="javascript:void(0);" class="table__link" id="table_search">Поиск</a></td>
+								</tr>
 								<tr>
 									<td>1</td>
 									<td>
-										<div class="table__flex">
-											<div class="table__text">Кировская область</div>
-										</div>
+										<div class="table__text">Кировская область</div>
 									</td>
 									<td>
-										<div class="table__flex">
 											<ul class="table__controls table__controls--icons">
 												<li>
 													<a href="javascript:void(0)" class="table__link">
@@ -470,18 +436,14 @@
 													</a>
 												</li>
 											</ul>
-										</div>
 									</td>
 								</tr>
 								<tr>
 									<td>2</td>
 									<td>
-										<div class="table__flex">
 											<div class="table__text">Московская </div>
-										</div>
 									</td>
 									<td>
-										<div class="table__flex">
 											<ul class="table__controls table__controls--icons">
 												<li>
 													<a href="javascript:void(0)" class="table__link">
@@ -504,18 +466,14 @@
 													</a>
 												</li>
 											</ul>
-										</div>
 									</td>
 								</tr>
 								<tr>
 									<td>3</td>
 									<td>
-										<div class="table__flex">
 											<div class="table__text">Краснодарский край Краснодарский край Краснодарский край</div>
-										</div>
 									</td>
 									<td>
-										<div class="table__flex">
 											<ul class="table__controls table__controls--icons">
 												<li>
 													<a href="javascript:void(0)" class="table__link">
@@ -538,7 +496,6 @@
 													</a>
 												</li>
 											</ul>
-										</div>
 									</td>
 								</tr>
 							</tbody>
@@ -615,7 +572,7 @@
 									</label>
 								</li>
 								<li class="selection__item">
-									<label class="checkbox keydown" tabindex="0"">
+									<label class="checkbox keydown" tabindex="0">
 										<input type="checkbox" name="" id="">
 										<div class="checkbox__box"></div>
 										<div class="checkbox__title">SantaFe</div>
@@ -629,21 +586,21 @@
 									</label>
 								</li>
 								<li class="selection__item">
-									<label class="checkbox keydown" tabindex="0"">
+									<label class="checkbox keydown" tabindex="0">
 										<input type="checkbox" name="" id="">
 										<div class="checkbox__box"></div>
 										<div class="checkbox__title">SantaFe</div>
 									</label>
 								</li>
 								<li class="selection__item">
-									<label class="checkbox keydown" tabindex="0"">
+									<label class="checkbox keydown" tabindex="0">
 										<input type="checkbox" name="" id="">
 										<div class="checkbox__box"></div>
 										<div class="checkbox__title">Solaris</div>
 									</label>
 								</li>
 								<li class="selection__item">
-									<label class="checkbox keydown" tabindex="0"">
+									<label class="checkbox keydown" tabindex="0">
 										<input type="checkbox" name="" id="">
 										<div class="checkbox__box"></div>
 										<div class="checkbox__title">SantaFe</div>
